# datasette-column-sum

./: pyproject.toml
.github/workflows/: test.yml
datasette_column_sum/: __init__.py
tests/: conftest.py  test_column_sum.py  test_playwright.py
